--- a/circle.yml
+++ b/circle.yml
@@ -15,3 +15,9 @@ dependencies:
 test:
   override:
     - yarn unit
+
+deployment:
+  master:
+    branch: master
+    commands:
+      - ./deploy.sh
